Update style.css with placeholders for sidebar styling

--- a/style.css
+++ b/style.css
@@ -68,3 +68,11 @@ div#lookingGlass > div {
     left: 100%;
     transition: all .6s cubic-bezier(0.165, 0.84, 0.44, 1); 
 }
+
+div.sidebarChecked {
+
+}
+
+div.sidebarUnchecked {
+    
+}
